# django-channels-bug-repo

./: README.md  profile_stats.py  profile_tests.sh  pyproject.toml
mysite/chat/: apps.py  consumers.py  routing.py  test_consumers.py
mysite/mysite/: routing.py  settings.py
