[tool.poetry]
name = "channels_tut"
version = "0.1.0"
description = ""
authors = ["Steve Dignam <steve@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
channels = "^2.2"
channels_redis = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-django = "^3.5"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
